force-app/main/default/objects/JBCXM__Playbook__c/JBCXM__Playbook__c.object-meta.xml
<CustomObject>
    <label>Playbook</label>
    <nameField>
        <label>Playbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playbooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>