force-app/main/default/objects/JBCXM__Playbook__c/fields/JBCXM__PlayBookType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PlayBookType__c</fullName>
    <label>PlayBookType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>