force-app/main/default/objects/JBCXM__Playbook__c/fields/JBCXM__Sync__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether this particular playbook needs to be synced or not.</description>
    <label>Sync</label>
    <type>Checkbox</type>
</CustomField>