force-app/main/default/objects/JBCXM__Playbook__c/fields/JBCXM__Tasks_Count__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Tasks_Count__c</fullName>
    <label>Tasks Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>