force-app/main/default/objects/JBCXM__Playbook__c/fields/JBCXM__UsedCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UsedCount__c</fullName>
    <label>Used Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>